# sphere-seeeduino-lvaonedge-sample

./: README.md
azuresphere/AzureSphereArduinoGateway/: CMakeLists.txt  app_manifest.json  azureiothub.c  azureiothub.h  main.c  parson.c  parson.h
seeeduino/motor_dirve_by_serial/: motor_dirve_by_serial.ino
services/FunctionAppMotionAlert/: FunctionAppMotionAlert.sln
services/FunctionAppMotionAlert/FunctionAppMotionAlert/: FunctionAppMotionAlert.csproj  FunctionLVAMotionDetect.cs  local.settings.json
services/FunctionAppMotionAlert/FunctionAppMotionAlert/Properties/: serviceDependencies.FunctionAppMotionAlert20200908092536 - Zip 配置.json
services/WebAppSphereRemote/: WebAppSphereRemote.sln
services/WebAppSphereRemote/WebAppSphereRemote/: Global.asax  Global.asax.cs  Startup.cs  Web.config  WebAppSphereRemote.csproj  packages.config
services/WebAppSphereRemote/WebAppSphereRemote/App_Start/: BundleConfig.cs  FilterConfig.cs  IdentityConfig.cs  RouteConfig.cs  Startup.Auth.cs
services/WebAppSphereRemote/WebAppSphereRemote/Controllers/: AccountController.cs  DeviceRegistriesController.cs  HomeController.cs  ManageController.cs
services/WebAppSphereRemote/WebAppSphereRemote/Data/: AzureIoTHubContext.cs
services/WebAppSphereRemote/WebAppSphereRemote/Models/: AccountViewModels.cs  DeviceRegistry.cs  IdentityModels.cs  ManageViewModels.cs
services/WebAppSphereRemote/WebAppSphereRemote/Properties/: AssemblyInfo.cs  serviceDependencies.WebAppSphereRemote20200904140938 - Web Deploy.json
services/WebAppSphereRemote/WebAppSphereRemote/Views/: Web.config
(+20 files in other folders)
